import "ServiceCommon.proto"

service MgResourceService {

}