syntax = "proto3";
option java_package="org.osgeo.mapguide";
package OSGeo.MapGuide;

// Describes a basic service operation response
message BasicResponse {
    //An error if one was raised by the service operation
    Error error = 1;
}

// Describes a means of accessing a given resource
message ResourceIdentifier {
    // The name
    string name = 1;
    // The path
    string path = 2;
    // The name of the repository
    string repository_name = 3;
    // The repository type
    string repository_type = 4;
    // The resource type
    string resource_type = 5;
}

// Describes an error returned by a service operation
message Error {
    // The name of the error
    string name = 1;
    // The error message
    string message = 2;
    // The stack trace of the service operation implementation that threw the error
    repeated string stack = 3;
}

// Describes a collection of strings
message StringCollection {
    // The list of string items
    repeated string items = 1;
}